syntax = "proto3";

package hmda.proto;

service CheckDigitService {
    rpc checkDigit (CheckDigitRequest) returns (CheckDigitResponse);
    rpc checkDigitStream (stream CheckDigitRequest) returns (stream CheckDigitResponse);
    rpc uliValidate (ValidateULIRequest) returns (ValidateULIResponse);
}

message CheckDigitRequest {
    string loanId = 1;
}

message CheckDigitResponse {
    ULIResponse uli = 1;
}

message ULIResponse {
    string loanId = 1;
    string checkDigit = 2;
    string uli = 3;
}

message ValidateULIRequest {
    string uli = 1;
}

message ValidateULIResponse {
    bool isValid = 1;
}